--- a/package.json
+++ b/package.json
@@ -4,10 +4,23 @@
   "description": "Angular Broker provides a pub/sub system for controller and service communication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test-single"
+  },
+  "homepage": "https://github.com/jaymes-bearden/angular-broker",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jaymes-bearden/angular-broker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jaymes-bearden/angular-broker/issues"
   },
   "author": "Jaymes Bearden",
-  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/jaymes-bearden/angular-broker/blob/master/LICENSE"
+    }
+  ],
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-gitinfo": "~0.1.6",
@@ -18,6 +31,9 @@
     "karma-jasmine": "~0.1.5",
     "karma-junit-reporter": "~0.2.2",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma-chrome-launcher": "~0.1.4"
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-coverage": "~0.2.6",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-coveralls": "~1.0.0"
   }
 }
